--- a/HomeWorkMay13th.Web/ClientApp/package.json
+++ b/HomeWorkMay13th.Web/ClientApp/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^3.4.1",
+    "immer": "^6.0.5",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "use-immer": "^0.4.0"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
